inicio de consumo de api

--- a/VelascoCrhystelProgreso3/VelascoCrhystelProgreso3.csproj
+++ b/VelascoCrhystelProgreso3/VelascoCrhystelProgreso3.csproj
@@ -67,7 +67,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Folder Include="Interfaces\" />
+	  <Folder Include="ViewModels\" />
 	</ItemGroup>
 
 </Project>
