--- a/VelascoCrhystelProgreso3/VelascoCrhystelProgreso3.csproj
+++ b/VelascoCrhystelProgreso3/VelascoCrhystelProgreso3.csproj
@@ -66,4 +66,10 @@
 		<PackageReference Include="SQLitePCLRaw.bundle_green" Version="2.1.10" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <MauiXaml Update="Views\MostrarBDView.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	</ItemGroup>
+
 </Project>
